--- a/public/assets/base.css
+++ b/public/assets/base.css
@@ -1,3 +1,14 @@
+html {
+  font-size: 100%;
+  line-height: 1.75em;
+}
+
+.btn {
+  width: 100%;
+  height: 10em;
+}
+
 h1 {
-  color: blue;
+  font-size: 2.8125em;
+  line-height: 1.24444em;
 }
