--- a/src/scss/_setup.scss
+++ b/src/scss/_setup.scss
@@ -3,3 +3,6 @@
 $base-font-size: 16px;
 $base-line-height: 28px;
 @include establish-baseline;
+
+$board-color: #AA8D70;
+$backing-color: rgba(#111, 0.8);
