--- a/public/assets/base.css
+++ b/public/assets/base.css
@@ -1,3 +1,59 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
+html {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+caption, th, td {
+  text-align: left;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
+q, blockquote {
+  quotes: none;
+}
+q:before, q:after, blockquote:before, blockquote:after {
+  content: "";
+  content: none;
+}
+
+a img {
+  border: none;
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+  display: block;
+}
+
 html {
   font-size: 100%;
   line-height: 1.75em;
@@ -23,19 +79,55 @@ h1 {
 }
 
 #game-board {
-  font-size: 1.5em;
-  line-height: 1.16667em;
+  font-size: 3.125em;
+  line-height: 1.12em;
   background: #AA8D70;
   padding: 2em;
-  height: 30em;
+  height: 15em;
   border-radius: 30%;
   position: relative;
   text-align: center;
   margin: auto;
   box-shadow: 0px 0px 12px #222;
 }
+@media only screen and (max-width: 699px) {
+  #game-board {
+    font-size: 2.375em;
+    line-height: 1.47368em;
+    height: 30em;
+  }
+}
 #game-board .inner {
   margin: auto;
-  top: 10vh;
+  top: 1em;
   position: relative;
+}
+#game-board .btn-info {
+  font-size: 0.9375em;
+  line-height: 1.86667em;
+  margin-top: 1em;
+  height: 2em;
+  box-shadow: 0 0 15px #333;
+}
+@media only screen and (max-width: 699px) {
+  #game-board .btn-info {
+    font-size: 0.9375em;
+    line-height: 1.86667em;
+    height: 2em;
+  }
+}
+#game-board .square {
+  box-shadow: 1px 1px 5px #333;
+  transition: all 0.3s linear;
+  opacity: 0.4;
+  position: relative;
+}
+@media only screen and (max-width: 699px) {
+  #game-board .square {
+    height: 75%;
+  }
+}
+#game-board .square.highlight {
+  box-shadow: 1px 1px 20px #333;
+  opacity: 1;
 }
